Fix formatting and spacing in SCSS files

--- a/src/components/EventInfoCard/EventInfoCard.scss
+++ b/src/components/EventInfoCard/EventInfoCard.scss
@@ -6,9 +6,11 @@
   transition: $transitionCubic;
   border-radius: 6px;
   padding: 10px;
+
   &:hover {
     box-shadow: $boxShadowHover;
   }
+
   &-Title {
     font-size: 18px;
     padding: 10px 0 20px;
@@ -16,25 +18,41 @@
     text-align: center;
     margin-bottom: 15px;
   }
+
   &-Content {
     margin-bottom: 15px;
   }
+
   &-ContentRow {
     display: flex;
     justify-content: space-between;
     margin-bottom: 16px;
   }
+
   &-ContentRow:last-child {
     margin-bottom: 0;
   }
+
   &-Item:last-child {
     text-align: right;
   }
+
   &-ItemTitle {
     font-size: 12px;
     margin-bottom: 4px;
   }
+
   &-ItemValue {
     font-size: 12px;
+  }
+
+  @media screen and ($desktop) {
+    &-ItemTitle {
+      font-size: 14px;
+    }
+  
+    &-ItemValue {
+      font-size: 14px;
+    }
   }
 }
