--- a/src/components/Grid/Grid.scss
+++ b/src/components/Grid/Grid.scss
@@ -8,16 +8,13 @@
     grid-template-columns: repeat(2, 1fr);
     column-gap: 32px;
   }
+
   @media screen and ($desktop) {
     grid-template-columns: repeat(3, 1fr);
+    
     &_4 {
       grid-template-columns: repeat(4, 1fr);
-      padding: 0 32px;
     }
   }
-  @media screen and ($desktopLarge) {
-    &_4 {
-      padding: 0 84px;
-    }
-  }
+  
 }
